--- a/public/index.html
+++ b/public/index.html
@@ -86,6 +86,25 @@
 </style>
     <!-- For Material UI : http://www.material-ui.com/ -->
     <link rel="preload" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" as="style" crossorigin="anonymous">
+    <script type="text/javascript">
+      // Taken from https://github.com/rafrex/spa-github-pages
+      (function(l) {
+        if (l.search) {
+          var q = {};
+          l.search.slice(1).split('&').forEach(function(v) {
+            var a = v.split('=');
+            q[a[0]] = a.slice(1).join('=').replace(/~and~/g, '&');
+          });
+          if (q.p !== undefined) {
+            window.history.replaceState(null, null,
+              l.pathname.slice(0, -1) + (q.p || '') +
+              (q.q ? ('?' + q.q) : '') +
+              l.hash
+            );
+          }
+        }
+      }(window.location))
+    </script>
   </head>
   <body>
     <div id="loadingSpinner">
