--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     <title>React App</title>
 <style>
 /** Material spinner from https://codepen.io/jczimm/pen/vEBpoL */
-#loadingSpinner {
+.loadingSpinner {
   position: absolute; display:block; left: 0; top: 100px; right: 0;
   margin: auto;
   padding: auto;
@@ -107,7 +107,7 @@
     </script>
   </head>
   <body>
-    <div id="loadingSpinner">
+    <div class="loadingSpinner" id="loadingSpinner">
       <svg class="circular" viewBox="25 25 50 50">
         <circle class="path" cx="50" cy="50" r="20" fill="none" stroke-width="2" stroke-miterlimit="10"/>
       </svg>
