--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <script type="text/javascript" charset="utf-8" src="cordova_plugins_ios/cordova.js"></script> 
 <style>
 /** Material spinner from https://codepen.io/jczimm/pen/vEBpoL */
 .loadingSpinner {
